UPDATE: updating the rmd to file to support latex expressions

--- a/Markdown/STA_380.Rmd
+++ b/Markdown/STA_380.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Pedictive Modeling - 11Aug"
 output: 
-  md_document:
-    variant: markdown_github
+  github_document:
+    pandoc_args: --webtex
 ---
 
 ```{r setup, include=FALSE}
