--- a/Markdown/STA_380.md
+++ b/Markdown/STA_380.md
@@ -1,33 +1,36 @@
+Pedictive Modeling - 11Aug
+================
+
 ### Probability Practice - Part A
 
-Probability of the person being a random clicker, *p*(*R**C*)=0.3
-Probability of the person being a truthful clicker, *p*(*T**C*)=0.7
-Using survery results, *p*(*Y**e**s*)=0.65 and *p*(*N**o*)=0.35
-For random clickers, *p*(*Y**e**s*|*R**C*)=0.5
+Probability of the person being a random clicker, ![p(RC) = 0.3](https://latex.codecogs.com/png.latex?p%28RC%29%20%3D%200.3 "p(RC) = 0.3")
+Probability of the person being a truthful clicker, ![p(TC) = 0.7](https://latex.codecogs.com/png.latex?p%28TC%29%20%3D%200.7 "p(TC) = 0.7")
+Using survery results, ![p(Yes) = 0.65](https://latex.codecogs.com/png.latex?p%28Yes%29%20%3D%200.65 "p(Yes) = 0.65") and ![p(No) = 0.35](https://latex.codecogs.com/png.latex?p%28No%29%20%3D%200.35 "p(No) = 0.35")
+For random clickers, ![p(Yes|RC) = 0.5](https://latex.codecogs.com/png.latex?p%28Yes%7CRC%29%20%3D%200.5 "p(Yes|RC) = 0.5")
 
 Applying rule of total probability,
-*p*(*Y**e**s*)=*p*(*Y**e**s*|*T**C*)\**p*(*T**C*)+*p*(*Y**e**s*|*R**C*)\**p*(*R**C*)
+![p(Yes) = p(Yes|TC)\*p(TC) + p(Yes|RC)\*p(RC)](https://latex.codecogs.com/png.latex?p%28Yes%29%20%3D%20p%28Yes%7CTC%29%2Ap%28TC%29%20%2B%20p%28Yes%7CRC%29%2Ap%28RC%29 "p(Yes) = p(Yes|TC)*p(TC) + p(Yes|RC)*p(RC)")
 
 All values except P(Yes|TC) are known in the above equation. Plugging in we get,
-0.65 = *p*(*Y**e**s*|*T**C*)\*0.7 + 0.5 \* 0.3
+![0.65 = p(Yes|TC)\*0.7 + 0.5\*0.3](https://latex.codecogs.com/png.latex?0.65%20%3D%20p%28Yes%7CTC%29%2A0.7%20%2B%200.5%2A0.3 "0.65 = p(Yes|TC)*0.7 + 0.5*0.3")
 
-Solving gives *p*(*Y**e**s*|*T**C*)= 0.7142857
+Solving gives ![p(Yes|TC) =](https://latex.codecogs.com/png.latex?p%28Yes%7CTC%29%20%3D "p(Yes|TC) =") 0.7142857
 
 ### Probability Practice - Part B
 
-Probability to test positive given someone has disease, *p*(*P*|*D*)=0.993
-Probability to test negative given someone is healthy, *p*(*N*|*H*)=0.9999
-Probability that someone has a disease, *p*(*D*)=0.000025
+Probability to test positive given someone has disease, ![p(P|D) = 0.993](https://latex.codecogs.com/png.latex?p%28P%7CD%29%20%3D%200.993 "p(P|D) = 0.993")
+Probability to test negative given someone is healthy, ![p(N|H) = 0.9999](https://latex.codecogs.com/png.latex?p%28N%7CH%29%20%3D%200.9999 "p(N|H) = 0.9999")
+Probability that someone has a disease, ![p(D) = 0.000025](https://latex.codecogs.com/png.latex?p%28D%29%20%3D%200.000025 "p(D) = 0.000025")
 
-To find: Probability of having disease given the test is positive, i.e. *p*(*D*|*P*)
+To find: Probability of having disease given the test is positive, i.e. ![p(D|P)](https://latex.codecogs.com/png.latex?p%28D%7CP%29 "p(D|P)")
 
-$p(D|P) = \\frac{p(P.D)}{p(P)}$
-$= \\frac{p(P|D)\*p(D)}{p(P|D)\*p(D) + p(P|H)\*p(H)}$
+![p(D|P) = \\frac{p(P.D)}{p(P)}](https://latex.codecogs.com/png.latex?p%28D%7CP%29%20%3D%20%5Cfrac%7Bp%28P.D%29%7D%7Bp%28P%29%7D "p(D|P) = \frac{p(P.D)}{p(P)}")
+![= \\frac{p(P|D)\*p(D)}{p(P|D)\*p(D) + p(P|H)\*p(H)}](https://latex.codecogs.com/png.latex?%3D%20%5Cfrac%7Bp%28P%7CD%29%2Ap%28D%29%7D%7Bp%28P%7CD%29%2Ap%28D%29%20%2B%20p%28P%7CH%29%2Ap%28H%29%7D "= \frac{p(P|D)*p(D)}{p(P|D)*p(D) + p(P|H)*p(H)}")
 
-Here, *p*(*P*|*H*)=1 − *p*(*N*|*H*)
-*p*(*H*)=1 − *p*(*D*)
+Here, ![p(P|H) = 1 - p(N|H)](https://latex.codecogs.com/png.latex?p%28P%7CH%29%20%3D%201%20-%20p%28N%7CH%29 "p(P|H) = 1 - p(N|H)")
+![p(H) = 1 - p(D)](https://latex.codecogs.com/png.latex?p%28H%29%20%3D%201%20-%20p%28D%29 "p(H) = 1 - p(D)")
 
-Substituting all values give *p*(*D*|*P*)= 0.1988824
+Substituting all values give ![p(D|P) =](https://latex.codecogs.com/png.latex?p%28D%7CP%29%20%3D "p(D|P) =") 0.1988824
 
 This number is very low if it is planned to implement this testing policy for the disease. Only ~20% of the individuals identified positive actually have the disease.
 
@@ -84,7 +87,7 @@ and the same for non-green buildings is:
     ##     name lower upper level     method estimate
     ## 1 result 25.72    27  0.95 percentile    26.69
 
-The maximum possible difference in rents thus comes out to be (31.22 − 25.72)= 5.5 and (27.5 − 27)= 0.5 as the minimum.
+The maximum possible difference in rents thus comes out to be ![(31.22 - 25.72) =](https://latex.codecogs.com/png.latex?%2831.22%20-%2025.72%29%20%3D "(31.22 - 25.72) =") 5.5 and ![(27.5 - 27) =](https://latex.codecogs.com/png.latex?%2827.5%20-%2027%29%20%3D "(27.5 - 27) =") 0.5 as the minimum.
 
 1.  Before starting the cost benefit analysis, let us check for any confounding variables. This is done because we have found correlation between rent and green buildings uptil now, but have no proof of the causation. Since the clusters take care of controlled sampling, we look for variables which can vary even within a cluster and can impact rents of green vs non-green buildings. Two of such variables are age and class.
 
@@ -206,18 +209,18 @@ In an attempt to quantify this fluctualtions, lets look at the correlation matri
 Correlation matrix:
 
     ##            ClCl.SPYa  ClCl.TLTa  ClCl.LQDa   ClCl.EEMa   ClCl.VNQa
-    ## ClCl.SPYa  1.0000000 -0.4135842 0.10201265  0.31209933  0.76183118
-    ## ClCl.TLTa -0.4135842  1.0000000 0.45248143 -0.12033619 -0.23566750
-    ## ClCl.LQDa  0.1020126  0.4524814 1.00000000  0.06008424  0.07577252
-    ## ClCl.EEMa  0.3120993 -0.1203362 0.06008424  1.00000000  0.21899233
-    ## ClCl.VNQa  0.7618312 -0.2356675 0.07577252  0.21899233  1.00000000
+    ## ClCl.SPYa  1.0000000 -0.4135842 0.10201265  0.31209933  0.76196507
+    ## ClCl.TLTa -0.4135842  1.0000000 0.45248143 -0.12033619 -0.23555622
+    ## ClCl.LQDa  0.1020126  0.4524814 1.00000000  0.06008424  0.07589612
+    ## ClCl.EEMa  0.3120993 -0.1203362 0.06008424  1.00000000  0.21904327
+    ## ClCl.VNQa  0.7619651 -0.2355562 0.07589612  0.21904327  1.00000000
 
 Standard Deviations:
 (a) SPY: 0.0117556
 (b) TLT: 0.0086969
 (c) LQD: 0.0049332
 (d) EEM: 0.050991
-(e) VNQ: 0.0198774
+(e) VNQ: 0.0198748
 
 These numbers suggest that EEM is the most aggressive of all ETFs and LQD the safest.
 
